Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.2.0
-
Mac 10.9
-
7f1051ed62ad3bc39c064af001e89ebdccc26a7e
Description
Crash happens if QGLFormat::openGLVersionFlags() is called before screeen is available. Possible scenario on Mac Mavericks when swithcing users and application is Login Item application.
crash log:
Crashed Thread: 0 Dispatch queue: com.apple.main-thread
Exception Type: EXC_BAD_ACCESS (SIGSEGV)
Exception Codes: EXC_I386_GPFLT
0 libobjc.A.dylib 0x00007fff8f952097 objc_msgSend + 23
1 libqcocoa.dylib 0x0000000104f169c2 0x104f00000 + 92610
2 libqcocoa.dylib 0x0000000104f0810e 0x104f00000 + 33038
3 QtGui 0x000000010029e9ed QOpenGLContext::create() + 45
4 QtOpenGL 0x0000000101a5dfe2 0x101a2b000 + 208866
5 QtOpenGL 0x0000000101a2f257 QGLFormat::openGLVersionFlags() + 119
Relates to QTBUG-37876. But crashes to different place.
To reproduce:
- System: Maverics 10.9 OSX
- Qt version: 5.2.0
For the both case please find Steps to reproduce:
1) Build the sample application using Qt 5.2.0 and you get a binary image example sample.app
2) So copy this sample.app into /Application folder so that all users can run this application
3) Make this application as a login item for two or three users. For this go to System Preferences -> select Login items tab -> add the application name sample.app. Do this for all other users as well.
4) After adding the sample.app as login item for all users,then logout from all users.
5) Now start login to first user and then switch between different users.Then you will get crash.
Attachments
Issue Links
- is required for
-
QTBUG-39695 deal better with dynamic screen adding/removal, including the "no screen" case
-
- Closed
-
- relates to
-
QTBUG-38326 Qt Creator window disappears when plugging out second monitor
-
- Closed
-
For Gerrit Dashboard: QTBUG-37878 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
82891,2 | OSX: wait for presence of SystemUIServer before graphical startup | stable | qt/qtbase | Status: ABANDONED | -2 | 0 |